PER-12# Bug fixed about Komal notes